# Rust-Backend-SMTP

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/config/: smtp.rs
src/controllers/: greet.rs  send_email.rs
src/data/: app_state.rs  email_data.rs  mod.rs
src/middleware/: cors.rs  logger.rs
src/routes/: greet.rs  mod.rs  send_email.rs
src/templates/: email.rs  email_template.txt
