[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-service = "2.0.2"
actix-web = "4.5.1"
dotenv = "0.15.0"
futures = "0.3.30"
lettre = "0.11.7"
native-tls = "0.2.11"
serde = { version = "1.0.200", features = ["derive"] }
tokio = "1.37.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
